automaton/interpreter.output
Терминалы не используются в грамматике

   END
   ER


Состояние 31 конфликты: 27 сдвига/вывода
Состояние 59 конфликты: 1 сдвига/вывода
Состояние 60 конфликты: 1 сдвига/вывода
Состояние 139 конфликты: 5 сдвига/вывода
Состояние 140 конфликты: 4 сдвига/вывода
Состояние 142 конфликты: 4 сдвига/вывода
Состояние 143 конфликты: 3 сдвига/вывода
Состояние 145 конфликты: 6 сдвига/вывода
Состояние 146 конфликты: 1 сдвига/вывода
Состояние 147 конфликты: 1 сдвига/вывода
Состояние 148 конфликты: 1 сдвига/вывода
Состояние 149 конфликты: 1 сдвига/вывода
Состояние 150 конфликты: 1 сдвига/вывода


Грамматика

    0 $accept: program $end

    1 program: func

    2 func: func stmts
    3     | %empty

    4 stmts: stmt
    5      | stmts stmt

    6 stmt: NEWLINE
    7     | expr NEWLINE
    8     | vector NEWLINE
    9     | matrix NEWLINE
   10     | print NEWLINE
   11     | vmdeclaration NEWLINE
   12     | declaration NEWLINE
   13     | assignment NEWLINE
   14     | iff NEWLINE
   15     | forr NEWLINE
   16     | function NEWLINE
   17     | callfunction NEWLINE
   18     | '(' stmts ')'

   19 iff: IF expr NEWLINE BEGIF stmts ENDIF

   20 forr: FORR declaration DOUBLEDOT expr NEWLINE BEGFOR stmts ENDFOR

   21 return_func: type VAR
   22            | return_func ',' type VAR

   23 args_func: '[' type VAR ']'
   24          | args_func ',' '[' type VAR ']'

   25 function: '[' return_func ']' DECLARE FUNC VAR '(' args_func ')' B NEWLINE stmts E

   26 callfunc_args: expr
   27              | vector
   28              | matrix
   29              | callfunc_args ',' expr
   30              | callfunc_args ',' vector
   31              | callfunc_args ',' matrix

   32 callfunction: FVARIABLE '[' callfunc_args ']'

   33 matrix: '{' listexprs '}'
   34       | MVARIABLE '(' vector ',' '[' ']' ')'
   35       | MVARIABLE '(' '[' ']' ',' vector ')'
   36       | MVARIABLE '(' matrix ')'
   37       | MVARIABLE
   38       | matrix '*' matrix
   39       | matrix ELEMMULT matrix
   40       | matrix '\''
   41       | matrix RIGHTSHIFT
   42       | matrix LEFTSHIFT
   43       | vector '\''
   44       | matrix ELEMMULT vector
   45       | matrix ELEMMULT expr

   46 listexprs: vector ',' vector
   47          | listexprs ',' vector

   48 vector: '{' exprs '}'
   49       | VVARIABLE '(' vector ',' '[' ']' ')'
   50       | MVARIABLE '(' expr ',' '[' ']' ')'
   51       | MVARIABLE '(' '[' ']' ',' expr ')'
   52       | VVARIABLE
   53       | vector ELEMMULT vector
   54       | vector RIGHTSHIFT
   55       | vector LEFTSHIFT
   56       | vector ELEMMULT expr

   57 exprs: expr ',' expr
   58      | exprs ',' expr

   59 vmdeclaration: VVARIABLE '(' expr ')' ASSIGN expr
   60              | VVARIABLE '(' vector ',' '[' ']' ')' ASSIGN vector
   61              | MVARIABLE '(' expr ',' expr ')' ASSIGN expr
   62              | MVARIABLE '(' expr ',' '[' ']' ')' ASSIGN vector
   63              | MVARIABLE '(' '[' ']' ',' expr ')' ASSIGN vector
   64              | MVARIABLE '(' vector ',' '[' ']' ')' ASSIGN matrix
   65              | MVARIABLE '(' '[' ']' ',' vector ')' ASSIGN matrix
   66              | MVARIABLE '(' matrix ')' ASSIGN matrix

   67 declaration: type VAR DECLARE expr
   68            | type VAR DECLARE vector
   69            | type VAR DECLARE matrix

   70 assignment: VARIABLE ASSIGN expr
   71           | VVARIABLE ASSIGN vector
   72           | MVARIABLE ASSIGN matrix

   73 print: PRINT '(' expr ')'
   74      | PRINT '(' VVARIABLE ')'
   75      | PRINT '(' MVARIABLE ')'

   76 expr: const
   77     | VARIABLE
   78     | '-' expr
   79     | expr '+' expr
   80     | expr '-' expr
   81     | expr '/' expr
   82     | expr '<' expr
   83     | expr '>' expr
   84     | '!' expr
   85     | expr CONJUNCTION expr
   86     | '(' expr ')'
   87     | VVARIABLE '(' expr ')'
   88     | MVARIABLE '(' expr ',' expr ')'

   89 type: INT
   90     | CINT
   91     | VINT
   92     | MINT
   93     | CVINT
   94     | CMINT
   95     | BOOLEAN
   96     | CBOOLEAN
   97     | VBOOLEAN
   98     | MBOOLEAN
   99     | CVBOOLEAN
  100     | CMBOOLEAN

  101 const: INTEGER
  102      | BOOL


Терминальные символы с правилами, в которых они появляются

$end (0) 0
'!' (33) 84
'\'' (39) 40 43
'(' (40) 18 25 34 35 36 49 50 51 59 60 61 62 63 64 65 66 73 74 75 86
    87 88
')' (41) 18 25 34 35 36 49 50 51 59 60 61 62 63 64 65 66 73 74 75 86
    87 88
'*' (42) 38
'+' (43) 79
',' (44) 22 24 29 30 31 34 35 46 47 49 50 51 57 58 60 61 62 63 64 65
    88
'-' (45) 78 80
'/' (47) 81
'<' (60) 82
'>' (62) 83
'[' (91) 23 24 25 32 34 35 49 50 51 60 62 63 64 65
']' (93) 23 24 25 32 34 35 49 50 51 60 62 63 64 65
'{' (123) 33 48
'}' (125) 33 48
error (256)
END (258)
BOOL <boolPtr> (259) 102
INTEGER <intPtr> (260) 101
VARIABLE <varName> (261) 70 77
VVARIABLE <varName> (262) 49 52 59 60 71 74 87
MVARIABLE <varName> (263) 34 35 36 37 50 51 61 62 63 64 65 66 72 75
    88
VAR <varName> (264) 21 22 23 24 25 67 68 69
FVARIABLE <varName> (265) 32
CINT <vtype> (266) 90
VINT <vtype> (267) 91
MINT <vtype> (268) 92
INT <vtype> (269) 89
CVINT <vtype> (270) 93
CMINT <vtype> (271) 94
BOOLEAN <vtype> (272) 95
CBOOLEAN <vtype> (273) 96
VBOOLEAN <vtype> (274) 97
MBOOLEAN <vtype> (275) 98
CVBOOLEAN <vtype> (276) 99
CMBOOLEAN <vtype> (277) 100
NEWLINE (278) 6 7 8 9 10 11 12 13 14 15 16 17 19 20 25
PRINT (279) 73 74 75
CONJUNCTION (280) 85
ELEMMULT (281) 39 44 45 53 56
LEFTSHIFT (282) 42 55
RIGHTSHIFT (283) 41 54
IF (284) 19
FORR (285) 20
BEGIF (286) 19
ENDIF (287) 19
BEGFOR (288) 20
ENDFOR (289) 20
ER (290)
DOUBLEDOT (291) 20
B (292) 25
E (293) 25
FUNC (294) 25
ASSIGN (295) 59 60 61 62 63 64 65 66 70 71 72
DECLARE (296) 25 67 68 69
UMINUS (297)


Нетерминальные символы с правилами, в которых они появляются

$accept (58)
    налево: 0
program (59)
    налево: 1, направо: 0
func (60)
    налево: 2 3, направо: 1 2
stmts <ptr> (61)
    налево: 4 5, направо: 2 5 18 19 20 25
stmt <ptr> (62)
    налево: 6 7 8 9 10 11 12 13 14 15 16 17 18, направо:
    4 5
iff <ptr> (63)
    налево: 19, направо: 14
forr <ptr> (64)
    налево: 20, направо: 15
return_func <ptr> (65)
    налево: 21 22, направо: 22 25
args_func <ptr> (66)
    налево: 23 24, направо: 24 25
function <ptr> (67)
    налево: 25, направо: 16
callfunc_args <ptr> (68)
    налево: 26 27 28 29 30 31, направо: 29 30 31 32
callfunction <ptr> (69)
    налево: 32, направо: 17
matrix <ptr> (70)
    налево: 33 34 35 36 37 38 39 40 41 42 43 44 45, направо:
    9 28 31 36 38 39 40 41 42 44 45 64 65 66 69 72
listexprs <ptr> (71)
    налево: 46 47, направо: 33 47
vector <ptr> (72)
    налево: 48 49 50 51 52 53 54 55 56, направо: 8 27
    30 34 35 43 44 46 47 49 53 54 55 56 60 62 63 64 65 68 71
exprs <ptr> (73)
    налево: 57 58, направо: 48 58
vmdeclaration <ptr> (74)
    налево: 59 60 61 62 63 64 65 66, направо: 11
declaration <varOpPtr> (75)
    налево: 67 68 69, направо: 12 20
assignment <varOpPtr> (76)
    налево: 70 71 72, направо: 13
print <ptr> (77)
    налево: 73 74 75, направо: 10
expr <ptr> (78)
    налево: 76 77 78 79 80 81 82 83 84 85 86 87 88, направо:
    7 19 20 26 29 45 50 51 56 57 58 59 61 62 63 67 70 73 78 79 80 81
    82 83 84 85 86 87 88
type <vtype> (79)
    налево: 89 90 91 92 93 94 95 96 97 98 99 100, направо:
    21 22 23 24 67 68 69
const <ptr> (80)
    налево: 101 102, направо: 76


State 0

    0 $accept: . program $end
    1 program: . func
    2 func: . func stmts
    3     | . %empty

    $default  вывод с использованием правила 3 (func)

    program  переход в состояние 1
    func     переход в состояние 2


State 1

    0 $accept: program . $end

    $end  сдвиг, и переход в состояние 3


State 2

    1 program: func .  [$end]
    2 func: func . stmts
    4 stmts: . stmt
    5      | . stmts stmt
    6 stmt: . NEWLINE
    7     | . expr NEWLINE
    8     | . vector NEWLINE
    9     | . matrix NEWLINE
   10     | . print NEWLINE
   11     | . vmdeclaration NEWLINE
   12     | . declaration NEWLINE
   13     | . assignment NEWLINE
   14     | . iff NEWLINE
   15     | . forr NEWLINE
   16     | . function NEWLINE
   17     | . callfunction NEWLINE
   18     | . '(' stmts ')'
   19 iff: . IF expr NEWLINE BEGIF stmts ENDIF
   20 forr: . FORR declaration DOUBLEDOT expr NEWLINE BEGFOR stmts ENDFOR
   25 function: . '[' return_func ']' DECLARE FUNC VAR '(' args_func ')' B NEWLINE stmts E
   32 callfunction: . FVARIABLE '[' callfunc_args ']'
   33 matrix: . '{' listexprs '}'
   34       | . MVARIABLE '(' vector ',' '[' ']' ')'
   35       | . MVARIABLE '(' '[' ']' ',' vector ')'
   36       | . MVARIABLE '(' matrix ')'
   37       | . MVARIABLE
   38       | . matrix '*' matrix
   39       | . matrix ELEMMULT matrix
   40       | . matrix '\''
   41       | . matrix RIGHTSHIFT
   42       | . matrix LEFTSHIFT
   43       | . vector '\''
   44       | . matrix ELEMMULT vector
   45       | . matrix ELEMMULT expr
   48 vector: . '{' exprs '}'
   49       | . VVARIABLE '(' vector ',' '[' ']' ')'
   50       | . MVARIABLE '(' expr ',' '[' ']' ')'
   51       | . MVARIABLE '(' '[' ']' ',' expr ')'
   52       | . VVARIABLE
   53       | . vector ELEMMULT vector
   54       | . vector RIGHTSHIFT
   55       | . vector LEFTSHIFT
   56       | . vector ELEMMULT expr
   59 vmdeclaration: . VVARIABLE '(' expr ')' ASSIGN expr
   60              | . VVARIABLE '(' vector ',' '[' ']' ')' ASSIGN vector
   61              | . MVARIABLE '(' expr ',' expr ')' ASSIGN expr
   62              | . MVARIABLE '(' expr ',' '[' ']' ')' ASSIGN vector
   63              | . MVARIABLE '(' '[' ']' ',' expr ')' ASSIGN vector
   64              | . MVARIABLE '(' vector ',' '[' ']' ')' ASSIGN matrix
   65              | . MVARIABLE '(' '[' ']' ',' vector ')' ASSIGN matrix
   66              | . MVARIABLE '(' matrix ')' ASSIGN matrix
   67 declaration: . type VAR DECLARE expr
   68            | . type VAR DECLARE vector
   69            | . type VAR DECLARE matrix
   70 assignment: . VARIABLE ASSIGN expr
   71           | . VVARIABLE ASSIGN vector
   72           | . MVARIABLE ASSIGN matrix
   73 print: . PRINT '(' expr ')'
   74      | . PRINT '(' VVARIABLE ')'
   75      | . PRINT '(' MVARIABLE ')'
   76 expr: . const
   77     | . VARIABLE
   78     | . '-' expr
   79     | . expr '+' expr
   80     | . expr '-' expr
   81     | . expr '/' expr
   82     | . expr '<' expr
   83     | . expr '>' expr
   84     | . '!' expr
   85     | . expr CONJUNCTION expr
   86     | . '(' expr ')'
   87     | . VVARIABLE '(' expr ')'
   88     | . MVARIABLE '(' expr ',' expr ')'
   89 type: . INT
   90     | . CINT
   91     | . VINT
   92     | . MINT
   93     | . CVINT
   94     | . CMINT
   95     | . BOOLEAN
   96     | . CBOOLEAN
   97     | . VBOOLEAN
   98     | . MBOOLEAN
   99     | . CVBOOLEAN
  100     | . CMBOOLEAN
  101 const: . INTEGER
  102      | . BOOL

    BOOL       сдвиг, и переход в состояние 4
    INTEGER    сдвиг, и переход в состояние 5
    VARIABLE   сдвиг, и переход в состояние 6
    VVARIABLE  сдвиг, и переход в состояние 7
    MVARIABLE  сдвиг, и переход в состояние 8
    FVARIABLE  сдвиг, и переход в состояние 9
    CINT       сдвиг, и переход в состояние 10
    VINT       сдвиг, и переход в состояние 11
    MINT       сдвиг, и переход в состояние 12
    INT        сдвиг, и переход в состояние 13
    CVINT      сдвиг, и переход в состояние 14
    CMINT      сдвиг, и переход в состояние 15
    BOOLEAN    сдвиг, и переход в состояние 16
    CBOOLEAN   сдвиг, и переход в состояние 17
    VBOOLEAN   сдвиг, и переход в состояние 18
    MBOOLEAN   сдвиг, и переход в состояние 19
    CVBOOLEAN  сдвиг, и переход в состояние 20
    CMBOOLEAN  сдвиг, и переход в состояние 21
    NEWLINE    сдвиг, и переход в состояние 22
    PRINT      сдвиг, и переход в состояние 23
    IF         сдвиг, и переход в состояние 24
    FORR       сдвиг, и переход в состояние 25
    '-'        сдвиг, и переход в состояние 26
    '!'        сдвиг, и переход в состояние 27
    '('        сдвиг, и переход в состояние 28
    '['        сдвиг, и переход в состояние 29
    '{'        сдвиг, и переход в состояние 30

    $default  вывод с использованием правила 1 (program)

    stmts          переход в состояние 31
    stmt           переход в состояние 32
    iff            переход в состояние 33
    forr           переход в состояние 34
    function       переход в состояние 35
    callfunction   переход в состояние 36
    matrix         переход в состояние 37
    vector         переход в состояние 38
    vmdeclaration  переход в состояние 39
    declaration    переход в состояние 40
    assignment     переход в состояние 41
    print          переход в состояние 42
    expr           переход в состояние 43
    type           переход в состояние 44
    const          переход в состояние 45


State 3

    0 $accept: program $end .

    $default  принять


State 4

  102 const: BOOL .

    $default  вывод с использованием правила 102 (const)


State 5

  101 const: INTEGER .

    $default  вывод с использованием правила 101 (const)


State 6

   70 assignment: VARIABLE . ASSIGN expr
   77 expr: VARIABLE .  [NEWLINE, CONJUNCTION, '<', '>', '+', '-', '/', ')']

    ASSIGN  сдвиг, и переход в состояние 46

    $default  вывод с использованием правила 77 (expr)


State 7

   49 vector: VVARIABLE . '(' vector ',' '[' ']' ')'
   52       | VVARIABLE .  [NEWLINE, ELEMMULT, '\'', LEFTSHIFT, RIGHTSHIFT]
   59 vmdeclaration: VVARIABLE . '(' expr ')' ASSIGN expr
   60              | VVARIABLE . '(' vector ',' '[' ']' ')' ASSIGN vector
   71 assignment: VVARIABLE . ASSIGN vector
   87 expr: VVARIABLE . '(' expr ')'

    ASSIGN  сдвиг, и переход в состояние 47
    '('     сдвиг, и переход в состояние 48

    $default  вывод с использованием правила 52 (vector)


State 8

   34 matrix: MVARIABLE . '(' vector ',' '[' ']' ')'
   35       | MVARIABLE . '(' '[' ']' ',' vector ')'
   36       | MVARIABLE . '(' matrix ')'
   37       | MVARIABLE .  [NEWLINE, ELEMMULT, '\'', LEFTSHIFT, RIGHTSHIFT, '*']
   50 vector: MVARIABLE . '(' expr ',' '[' ']' ')'
   51       | MVARIABLE . '(' '[' ']' ',' expr ')'
   61 vmdeclaration: MVARIABLE . '(' expr ',' expr ')' ASSIGN expr
   62              | MVARIABLE . '(' expr ',' '[' ']' ')' ASSIGN vector
   63              | MVARIABLE . '(' '[' ']' ',' expr ')' ASSIGN vector
   64              | MVARIABLE . '(' vector ',' '[' ']' ')' ASSIGN matrix
   65              | MVARIABLE . '(' '[' ']' ',' vector ')' ASSIGN matrix
   66              | MVARIABLE . '(' matrix ')' ASSIGN matrix
   72 assignment: MVARIABLE . ASSIGN matrix
   88 expr: MVARIABLE . '(' expr ',' expr ')'

    ASSIGN  сдвиг, и переход в состояние 49
    '('     сдвиг, и переход в состояние 50

    $default  вывод с использованием правила 37 (matrix)


State 9

   32 callfunction: FVARIABLE . '[' callfunc_args ']'

    '['  сдвиг, и переход в состояние 51


State 10

   90 type: CINT .

    $default  вывод с использованием правила 90 (type)


State 11

   91 type: VINT .

    $default  вывод с использованием правила 91 (type)


State 12

   92 type: MINT .

    $default  вывод с использованием правила 92 (type)


State 13

   89 type: INT .

    $default  вывод с использованием правила 89 (type)


State 14

   93 type: CVINT .

    $default  вывод с использованием правила 93 (type)


State 15

   94 type: CMINT .

    $default  вывод с использованием правила 94 (type)


State 16

   95 type: BOOLEAN .

    $default  вывод с использованием правила 95 (type)


State 17

   96 type: CBOOLEAN .

    $default  вывод с использованием правила 96 (type)


State 18

   97 type: VBOOLEAN .

    $default  вывод с использованием правила 97 (type)


State 19

   98 type: MBOOLEAN .

    $default  вывод с использованием правила 98 (type)


State 20

   99 type: CVBOOLEAN .

    $default  вывод с использованием правила 99 (type)


State 21

  100 type: CMBOOLEAN .

    $default  вывод с использованием правила 100 (type)


State 22

    6 stmt: NEWLINE .

    $default  вывод с использованием правила 6 (stmt)


State 23

   73 print: PRINT . '(' expr ')'
   74      | PRINT . '(' VVARIABLE ')'
   75      | PRINT . '(' MVARIABLE ')'

    '('  сдвиг, и переход в состояние 52


State 24

   19 iff: IF . expr NEWLINE BEGIF stmts ENDIF
   76 expr: . const
   77     | . VARIABLE
   78     | . '-' expr
   79     | . expr '+' expr
   80     | . expr '-' expr
   81     | . expr '/' expr
   82     | . expr '<' expr
   83     | . expr '>' expr
   84     | . '!' expr
   85     | . expr CONJUNCTION expr
   86     | . '(' expr ')'
   87     | . VVARIABLE '(' expr ')'
   88     | . MVARIABLE '(' expr ',' expr ')'
  101 const: . INTEGER
  102      | . BOOL

    BOOL       сдвиг, и переход в состояние 4
    INTEGER    сдвиг, и переход в состояние 5
    VARIABLE   сдвиг, и переход в состояние 53
    VVARIABLE  сдвиг, и переход в состояние 54
    MVARIABLE  сдвиг, и переход в состояние 55
    '-'        сдвиг, и переход в состояние 26
    '!'        сдвиг, и переход в состояние 27
    '('        сдвиг, и переход в состояние 56

    expr   переход в состояние 57
    const  переход в состояние 45


State 25

   20 forr: FORR . declaration DOUBLEDOT expr NEWLINE BEGFOR stmts ENDFOR
   67 declaration: . type VAR DECLARE expr
   68            | . type VAR DECLARE vector
   69            | . type VAR DECLARE matrix
   89 type: . INT
   90     | . CINT
   91     | . VINT
   92     | . MINT
   93     | . CVINT
   94     | . CMINT
   95     | . BOOLEAN
   96     | . CBOOLEAN
   97     | . VBOOLEAN
   98     | . MBOOLEAN
   99     | . CVBOOLEAN
  100     | . CMBOOLEAN

    CINT       сдвиг, и переход в состояние 10
    VINT       сдвиг, и переход в состояние 11
    MINT       сдвиг, и переход в состояние 12
    INT        сдвиг, и переход в состояние 13
    CVINT      сдвиг, и переход в состояние 14
    CMINT      сдвиг, и переход в состояние 15
    BOOLEAN    сдвиг, и переход в состояние 16
    CBOOLEAN   сдвиг, и переход в состояние 17
    VBOOLEAN   сдвиг, и переход в состояние 18
    MBOOLEAN   сдвиг, и переход в состояние 19
    CVBOOLEAN  сдвиг, и переход в состояние 20
    CMBOOLEAN  сдвиг, и переход в состояние 21

    declaration  переход в состояние 58
    type         переход в состояние 44


State 26

   76 expr: . const
   77     | . VARIABLE
   78     | . '-' expr
   78     | '-' . expr
   79     | . expr '+' expr
   80     | . expr '-' expr
   81     | . expr '/' expr
   82     | . expr '<' expr
   83     | . expr '>' expr
   84     | . '!' expr
   85     | . expr CONJUNCTION expr
   86     | . '(' expr ')'
   87     | . VVARIABLE '(' expr ')'
   88     | . MVARIABLE '(' expr ',' expr ')'
  101 const: . INTEGER
  102      | . BOOL

    BOOL       сдвиг, и переход в состояние 4
    INTEGER    сдвиг, и переход в состояние 5
    VARIABLE   сдвиг, и переход в состояние 53
    VVARIABLE  сдвиг, и переход в состояние 54
    MVARIABLE  сдвиг, и переход в состояние 55
    '-'        сдвиг, и переход в состояние 26
    '!'        сдвиг, и переход в состояние 27
    '('        сдвиг, и переход в состояние 56

    expr   переход в состояние 59
    const  переход в состояние 45


State 27

   76 expr: . const
   77     | . VARIABLE
   78     | . '-' expr
   79     | . expr '+' expr
   80     | . expr '-' expr
   81     | . expr '/' expr
   82     | . expr '<' expr
   83     | . expr '>' expr
   84     | . '!' expr
   84     | '!' . expr
   85     | . expr CONJUNCTION expr
   86     | . '(' expr ')'
   87     | . VVARIABLE '(' expr ')'
   88     | . MVARIABLE '(' expr ',' expr ')'
  101 const: . INTEGER
  102      | . BOOL

    BOOL       сдвиг, и переход в состояние 4
    INTEGER    сдвиг, и переход в состояние 5
    VARIABLE   сдвиг, и переход в состояние 53
    VVARIABLE  сдвиг, и переход в состояние 54
    MVARIABLE  сдвиг, и переход в состояние 55
    '-'        сдвиг, и переход в состояние 26
    '!'        сдвиг, и переход в состояние 27
    '('        сдвиг, и переход в состояние 56

    expr   переход в состояние 60
    const  переход в состояние 45


State 28

    4 stmts: . stmt
    5      | . stmts stmt
    6 stmt: . NEWLINE
    7     | . expr NEWLINE
    8     | . vector NEWLINE
    9     | . matrix NEWLINE
   10     | . print NEWLINE
   11     | . vmdeclaration NEWLINE
   12     | . declaration NEWLINE
   13     | . assignment NEWLINE
   14     | . iff NEWLINE
   15     | . forr NEWLINE
   16     | . function NEWLINE
   17     | . callfunction NEWLINE
   18     | . '(' stmts ')'
   18     | '(' . stmts ')'
   19 iff: . IF expr NEWLINE BEGIF stmts ENDIF
   20 forr: . FORR declaration DOUBLEDOT expr NEWLINE BEGFOR stmts ENDFOR
   25 function: . '[' return_func ']' DECLARE FUNC VAR '(' args_func ')' B NEWLINE stmts E
   32 callfunction: . FVARIABLE '[' callfunc_args ']'
   33 matrix: . '{' listexprs '}'
   34       | . MVARIABLE '(' vector ',' '[' ']' ')'
   35       | . MVARIABLE '(' '[' ']' ',' vector ')'
   36       | . MVARIABLE '(' matrix ')'
   37       | . MVARIABLE
   38       | . matrix '*' matrix
   39       | . matrix ELEMMULT matrix
   40       | . matrix '\''
   41       | . matrix RIGHTSHIFT
   42       | . matrix LEFTSHIFT
   43       | . vector '\''
   44       | . matrix ELEMMULT vector
   45       | . matrix ELEMMULT expr
   48 vector: . '{' exprs '}'
   49       | . VVARIABLE '(' vector ',' '[' ']' ')'
   50       | . MVARIABLE '(' expr ',' '[' ']' ')'
   51       | . MVARIABLE '(' '[' ']' ',' expr ')'
   52       | . VVARIABLE
   53       | . vector ELEMMULT vector
   54       | . vector RIGHTSHIFT
   55       | . vector LEFTSHIFT
   56       | . vector ELEMMULT expr
   59 vmdeclaration: . VVARIABLE '(' expr ')' ASSIGN expr
   60              | . VVARIABLE '(' vector ',' '[' ']' ')' ASSIGN vector
   61              | . MVARIABLE '(' expr ',' expr ')' ASSIGN expr
   62              | . MVARIABLE '(' expr ',' '[' ']' ')' ASSIGN vector
   63              | . MVARIABLE '(' '[' ']' ',' expr ')' ASSIGN vector
   64              | . MVARIABLE '(' vector ',' '[' ']' ')' ASSIGN matrix
   65              | . MVARIABLE '(' '[' ']' ',' vector ')' ASSIGN matrix
   66              | . MVARIABLE '(' matrix ')' ASSIGN matrix
   67 declaration: . type VAR DECLARE expr
   68            | . type VAR DECLARE vector
   69            | . type VAR DECLARE matrix
   70 assignment: . VARIABLE ASSIGN expr
   71           | . VVARIABLE ASSIGN vector
   72           | . MVARIABLE ASSIGN matrix
   73 print: . PRINT '(' expr ')'
   74      | . PRINT '(' VVARIABLE ')'
   75      | . PRINT '(' MVARIABLE ')'
   76 expr: . const
   77     | . VARIABLE
   78     | . '-' expr
   79     | . expr '+' expr
   80     | . expr '-' expr
   81     | . expr '/' expr
   82     | . expr '<' expr
   83     | . expr '>' expr
   84     | . '!' expr
   85     | . expr CONJUNCTION expr
   86     | . '(' expr ')'
   86     | '(' . expr ')'
   87     | . VVARIABLE '(' expr ')'
   88     | . MVARIABLE '(' expr ',' expr ')'
   89 type: . INT
   90     | . CINT
   91     | . VINT
   92     | . MINT
   93     | . CVINT
   94     | . CMINT
   95     | . BOOLEAN
   96     | . CBOOLEAN
   97     | . VBOOLEAN
   98     | . MBOOLEAN
   99     | . CVBOOLEAN
  100     | . CMBOOLEAN
  101 const: . INTEGER
  102      | . BOOL

    BOOL       сдвиг, и переход в состояние 4
    INTEGER    сдвиг, и переход в состояние 5
    VARIABLE   сдвиг, и переход в состояние 6
    VVARIABLE  сдвиг, и переход в состояние 7
    MVARIABLE  сдвиг, и переход в состояние 8
    FVARIABLE  сдвиг, и переход в состояние 9
    CINT       сдвиг, и переход в состояние 10
    VINT       сдвиг, и переход в состояние 11
    MINT       сдвиг, и переход в состояние 12
    INT        сдвиг, и переход в состояние 13
    CVINT      сдвиг, и переход в состояние 14
    CMINT      сдвиг, и переход в состояние 15
    BOOLEAN    сдвиг, и переход в состояние 16
    CBOOLEAN   сдвиг, и переход в состояние 17
    VBOOLEAN   сдвиг, и переход в состояние 18
    MBOOLEAN   сдвиг, и переход в состояние 19
    CVBOOLEAN  сдвиг, и переход в состояние 20
    CMBOOLEAN  сдвиг, и переход в состояние 21
    NEWLINE    сдвиг, и переход в состояние 22
    PRINT      сдвиг, и переход в состояние 23
    IF         сдвиг, и переход в состояние 24
    FORR       сдвиг, и переход в состояние 25
    '-'        сдвиг, и переход в состояние 26
    '!'        сдвиг, и переход в состояние 27
    '('        сдвиг, и переход в состояние 28
    '['        сдвиг, и переход в состояние 29
    '{'        сдвиг, и переход в состояние 30

    stmts          переход в состояние 61
    stmt           переход в состояние 32
    iff            переход в состояние 33
    forr           переход в состояние 34
    function       переход в состояние 35
    callfunction   переход в состояние 36
    matrix         переход в состояние 37
    vector         переход в состояние 38
    vmdeclaration  переход в состояние 39
    declaration    переход в состояние 40
    assignment     переход в состояние 41
    print          переход в состояние 42
    expr           переход в состояние 62
    type           переход в состояние 44
    const          переход в состояние 45


State 29

   21 return_func: . type VAR
   22            | . return_func ',' type VAR
   25 function: '[' . return_func ']' DECLARE FUNC VAR '(' args_func ')' B NEWLINE stmts E
   89 type: . INT
   90     | . CINT
   91     | . VINT
   92     | . MINT
   93     | . CVINT
   94     | . CMINT
   95     | . BOOLEAN
   96     | . CBOOLEAN
   97     | . VBOOLEAN
   98     | . MBOOLEAN
   99     | . CVBOOLEAN
  100     | . CMBOOLEAN

    CINT       сдвиг, и переход в состояние 10
    VINT       сдвиг, и переход в состояние 11
    MINT       сдвиг, и переход в состояние 12
    INT        сдвиг, и переход в состояние 13
    CVINT      сдвиг, и переход в состояние 14
    CMINT      сдвиг, и переход в состояние 15
    BOOLEAN    сдвиг, и переход в состояние 16
    CBOOLEAN   сдвиг, и переход в состояние 17
    VBOOLEAN   сдвиг, и переход в состояние 18
    MBOOLEAN   сдвиг, и переход в состояние 19
    CVBOOLEAN  сдвиг, и переход в состояние 20
    CMBOOLEAN  сдвиг, и переход в состояние 21

    return_func  переход в состояние 63
    type         переход в состояние 64


State 30

   33 matrix: '{' . listexprs '}'
   46 listexprs: . vector ',' vector
   47          | . listexprs ',' vector
   48 vector: . '{' exprs '}'
   48       | '{' . exprs '}'
   49       | . VVARIABLE '(' vector ',' '[' ']' ')'
   50       | . MVARIABLE '(' expr ',' '[' ']' ')'
   51       | . MVARIABLE '(' '[' ']' ',' expr ')'
   52       | . VVARIABLE
   53       | . vector ELEMMULT vector
   54       | . vector RIGHTSHIFT
   55       | . vector LEFTSHIFT
   56       | . vector ELEMMULT expr
   57 exprs: . expr ',' expr
   58      | . exprs ',' expr
   76 expr: . const
   77     | . VARIABLE
   78     | . '-' expr
   79     | . expr '+' expr
   80     | . expr '-' expr
   81     | . expr '/' expr
   82     | . expr '<' expr
   83     | . expr '>' expr
   84     | . '!' expr
   85     | . expr CONJUNCTION expr
   86     | . '(' expr ')'
   87     | . VVARIABLE '(' expr ')'
   88     | . MVARIABLE '(' expr ',' expr ')'
  101 const: . INTEGER
  102      | . BOOL

    BOOL       сдвиг, и переход в состояние 4
    INTEGER    сдвиг, и переход в состояние 5
    VARIABLE   сдвиг, и переход в состояние 53
    VVARIABLE  сдвиг, и переход в состояние 65
    MVARIABLE  сдвиг, и переход в состояние 66
    '-'        сдвиг, и переход в состояние 26
    '!'        сдвиг, и переход в состояние 27
    '('        сдвиг, и переход в состояние 56
    '{'        сдвиг, и переход в состояние 67

    listexprs  переход в состояние 68
    vector     переход в состояние 69
    exprs      переход в состояние 70
    expr       переход в состояние 71
    const      переход в состояние 45


State 31
